# PhotoShare

./: .gitignore  Procfile  README (1).md  pyproject.toml  requirements.txt
UMLs/: PhotoModel diagram.drawio  TagModel diagram.drawio  UserModel diagram.drawio
src/: alembic.ini  create_fake_users.py  database.py  dev.env  faker.py  main.py  photo_share.sqlite.db  settings.py  test_db.sqlite
src/auth/: require_role.py  routes.py  service.py
src/comment/: model.py  orm.py  routes.py
src/email_service/: routes.py
src/email_service/templates/: confim_email.html  confirm_email.html
src/frontend/: model.py  routes.py
src/frontend/static/: htm.styles.css  htmx.styles.css
src/frontend/templates/: base.html  index.html
src/middlewares/: crutches.py  registrator.py  response_handlers.py
src/migrations/: env.py
src/migrations/SQLs/: blacklist_202405251351.sql  blacklist_202405251718.sql  comments_202405242156.sql  photos_202405211915.sql  photos_202405250842.sql  profiles_202405211915.sql  profiles_202405242007.sql  users_202405211914.sql  users_202405242007.sql
src/migrations/versions/: 188128640490_nullable_updted_at_true.py  2c1d24d059c0_add_public_id_photoorm.py  (+12 more)
src/photo/: model.py  orm.py  routes.py
src/seeds/: seed_users.py
src/tags/: model.py  orm.py  routes.py
src/user_profile/: model.py  orm.py  routes.py
src/userprofile/: model.py  orm.py  routes.py
src/utils/: model_utilities.py
tests/: conftest.py
tests/auth/: test_auth_require_role.py  test_auth_services.py
tests/comment/: test_comment.py
tests/user_profile/: test_user.py
(+9 files in other folders)
